# NeuralNetworkExercise

./: .gitignore  README.md
.github/workflows/: docker-image.yml
NeuralNetwork/: CMakeLists.txt  Dockerfile
NeuralNetwork/src/: NeuralNetwork.cpp  NeuralNetwork.hpp  main.cpp
